# node-vue3

./: .dockerignore  .env  .env.development  .env.local  .env.production  .env.test  .eslintignore  .eslintrc.cjs  .gitignore  .npmrc  .prettierignore  .prettierrc.yaml  README.md  cypress.config.ts  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
cypress/fixtures/: profile.json
cypress/support/: e2e.ts
db/migrations/: 20250206183030_create_workspaces.js  20250211183030_create_user.js  20250318183030_create_dict.js  20250401123031_create_potattributeinfo.js  20250401143032_create_potdeptuserinfo.js  20250401163033_create_potdevice.js  20250401183030_create_subwork.js  20250401183030_create_work.js  20250401183036_create_potworkdetailbasicinfo.js  20250401183837_create_potworkdetaildeviceinfo.js  20250401186035_create_potworkdetailattributeinfo.js  20250401188039_create_potworkdetailpositioninfo.js  20250401193034_create_potwork.js  20250402183038_create_potworkdetailiteminfo.js  20250402292038_create_weatherinfo.js  20250407183030_create_point.js  20250414183030_create_file.js  20250425292038_create_potitembaseing.js  20250425302038_create_potworkdetailing.js  20250429302038_create_potattributeing.js
db/seeds/: create_default_workspace.js
docker/: Dockerfile  docker-compose.yml
mock/: socket.html
patches/: sqlite3@5.1.7.patch
public/: loading.css  loading.html
scripts/: alias.js  main.vite.config.js  preload.vite.config.js  removeLocales.js  renderer.vite.config.js  util.js
src/lib/: EkhoTTS.ts  XmlParser.ts  clock.ts  deviceCode.ts  figlet.ts  file.ts  index.ts  killProcess.ts  logger.ts  memory.ts  saveFileToLoacl.ts  storage.ts  system.ts  updater.ts  (+1 more)
tasks/: CMakeLists.txt  build-native-module.sh  cross-toolchain.cmake
tasks/libs_linux/: bluetooth_server.py
tasks/nsi/: installer.nsi
(+205 files in other folders)
